--- a/src/styles/cardStyles.css
+++ b/src/styles/cardStyles.css
@@ -5,12 +5,33 @@
   width: 80%;
 }
 
+a {
+  color: rgb(117, 93, 113);
+  text-decoration: none;
+}
+
+h2 {
+  color: rgb(50, 20, 60);
+}
+
 .card {
-  background-color: rgb(230, 180, 250);
+  background-color: white;
   border-radius: 10px;
-  height: 300px;
+  height: 270px;
   margin-bottom: 30px;
   margin-right: 30px;
   padding: 20px;
+  text-align: center;
   width: 180px;
+}
+
+.add-to-cart-button {
+  background-color: rgb(210, 170, 250);
+  border: 2px solid rgb(253, 227, 247);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.add-to-cart-button:hover {
+  background-color: rgb(230, 180, 250);
 }
