--- a/src/App.scss
+++ b/src/App.scss
@@ -319,14 +319,27 @@ input {
     width: 220px;
     background-color: $card-bg-color;
 
+
     .product-card-image {
       width: 100%;
       height: 60%;
       display: flex;
       align-content: center;
-      img {
+
+      .free-shipping {
+        width: 100px;
+        height: 100px;
+        position: relative;
+        top:0px;
+        left: 0px;
+        z-index: 5;
+      }
+  
+      .cart-image {
         width: 100%;
         max-height: 100%;
+        z-index:1;
+        overflow:hidden;
       }
     }
 
