--- a/src/App.scss
+++ b/src/App.scss
@@ -326,21 +326,26 @@ input {
       display: flex;
       align-content: center;
 
-      .free-shipping {
-        width: 100px;
-        height: 100px;
-        position: relative;
-        top:0px;
-        left: 0px;
-        z-index: 5;
-      }
-  
-      .cart-image {
+      .cart-image-box {
         width: 100%;
-        max-height: 100%;
-        z-index:1;
-        overflow:hidden;
+        
+        .free-shipping {
+          width: 100px;
+          height: 100px;
+          position: relative;
+          top:0px;
+          left: 0px;
+          z-index: 5;
+        }
+    
+        .cart-image {
+          width: 100%;
+          max-height: 100%;
+          z-index:1;
+          overflow:hidden;
+        }
       }
+
     }
 
     .product-card-info {
