--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-*, :after, :before {
-  box-sizing: border-box;
-}
-
 body {
   background: #ededed;
   margin: 0;
@@ -25,39 +21,17 @@ body {
   padding: 5px;
 }
 
-.search-container {
-  display: flex;
-  height: 32px;
+.header input {
+  border: none;
+  width: 260px;
 }
 
-.search-container button {
+.header button {
   background-color: white;
   border: none;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+  border-left: 1px solid rgb(214, 211, 211);
   cursor: pointer;
-  height: 32px;
-  margin: 0;
-  padding: 0;
-  width: 32px;
 }
-
-.search-input {
-  border: none;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-  transition: 0.5s;
-  width: 30px;
-}
-
-.search-input:focus {
-  border: none;
-  outline: none;
-  transition: 0.5s;
-  width: 380px;
-}
-
-.material-icons.md-32 { font-size: 32px; }
 
 .header img {
   height: 32px;
@@ -70,10 +44,6 @@ body {
   justify-content: center;
   margin: auto;
   max-width: 1215px;
-}
-
-.filter-options {
-  display: none;
 }
 
 .left-content {
@@ -124,7 +94,6 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 11px;
-  justify-content: space-between;
   margin-bottom: 5px;
   margin-left: 5px;
   overflow: hidden;
@@ -140,18 +109,19 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 11px;
-  justify-content: space-between;
+  height: 398.08;
   margin-bottom: 5px;
   margin-left: 5px;
   overflow: hidden;
   transform: scale(1.05);
   transition: transform 1s;
   width: 32%;
+  z-index: 1;
 }
 
 .product img {
-  max-height: 240px;
-  max-width: 240px;
+  height: 240px;
+  width: 240px;
 }
 
 .product-info-wraper {
@@ -181,26 +151,17 @@ body {
   max-height: 36px;
 }
 
-@media screen and ( max-width : 600px ) {
+@media only screen and ( max-width : 600px ) {
 
   .header {
     background-color: #fff159;
     border: 0;
     display: flex;
     justify-content: space-around;
-    width: auto;
   }
 
-  .filter-options {
-    display: block;
-    height: 50px;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-  }
-
-  .left-content {
-    display: none;
+  .header input {
+    width: 150px;
   }
 
   .main {
@@ -208,68 +169,4 @@ body {
     margin: 0;
     width: 100%;
   }
-
-  .right-content {
-    width: 100%;
-  }
-
-  .categories-list {
-    display: flex;
-    flex-direction: column;
-    margin-left: 5px;
-    overflow: hidden;
-    width: auto;
-  }
-
-  .search-input {
-    border: none;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-    transition: 0.5s;
-    width: 30px;
-  }
-
-  .search-input:focus {
-    border: none;
-    outline: none;
-    transition: 0.5s;
-    width: 280px;
-  }
-
-  .show-products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: auto;
-    width: 80%;
-  }
-
-  .product:not( :hover ) {
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
-    display: flex;
-    flex-direction: column;
-    font-size: 11px;
-    margin-bottom: 5px;
-    overflow: hidden;
-    transition: transform 1s;
-    width: 100%;
-  }
-
-  .product:hover {
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 20px;
-    box-shadow: 0 0 11px rgba(15, 15, 15, 0.2);
-    display: flex;
-    flex-direction: column;
-    font-size: 11px;
-    margin-bottom: 5px;
-    overflow: hidden;
-    transform: scale(1.05);
-    transition: transform 1s;
-    width: 100%;
-  }
-
 }
