--- a/src/App.css
+++ b/src/App.css
@@ -399,22 +399,16 @@ input:focus {
   display: flex;
   -ms-flex-line-pack: center;
       align-content: center;
+  border: 1px solid red;
 }
 
 .product-card-wraper .product-card .product-card-image .free-shipping {
   width: 100px;
   height: 100px;
-  position: relative;
   top: 0px;
   left: 0px;
-  z-index: 5;
-}
-
-.product-card-wraper .product-card .product-card-image .cart-image {
-  width: 100%;
-  max-height: 100%;
   z-index: 1;
-  overflow: hidden;
+  position: relative;
 }
 
 .product-card-wraper .product-card .product-card-info {
