--- a/src/App.scss
+++ b/src/App.scss
@@ -348,13 +348,13 @@ input {
       height: 60%;
       display: flex;
       align-content: center;
-      border: 1px solid red;
+      // border: 1px solid red;
 
       .free-shipping {
         width: 100px;
         height: 100px;
-        top: 0px;
-        left: 0px;
+        top: -1px;
+        left: -6px;
         z-index: 1;
         position: relative;
       }
@@ -362,7 +362,7 @@ input {
 
 
     .product-card-info {
-      height: 30%;
+      height: 40%;
       width: 94%;
       display: flex;
       flex-direction: column;
@@ -370,7 +370,6 @@ input {
       margin-left: auto;
       margin-right: auto;
       align-items: center;
-      margin-top: 14px;
       justify-content: center;
 
       .product-card-info-price {
