--- a/src/App.css
+++ b/src/App.css
@@ -522,6 +522,30 @@ input:focus {
   padding: 10px;
 }
 
+.product-detail .detail-image {
+  width: 200px;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  border: 1px solid #7a7a7a;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.product-detail .detail-image .free-shipping {
+  width: 100px;
+  height: 100px;
+  top: -4px;
+  left: -4px;
+  z-index: 1;
+  border: 0;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0);
+}
+
 .product-detail h1 {
   margin: 2px;
   padding: 2px;
@@ -568,6 +592,15 @@ input:focus {
   font-size: 1.1em;
   color: #000000fa;
   margin-right: 2px;
+}
+
+.product-detail .product-attr {
+  min-width: 600px;
+  min-height: 400px;
+  border: 1px solid red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .product-detail .product-add-cart {
