--- a/src/App.css
+++ b/src/App.css
@@ -1015,4 +1015,10 @@ input:focus {
   height: 30px;
   margin-bottom: 10px;
 }
+
+.checkout {
+  width: 100%;
+  min-height: 400px;
+  border: 1px solid red;
+}
 /*# sourceMappingURL=App.css.map */
