--- a/src/components/Stars.css
+++ b/src/components/Stars.css
@@ -10,6 +10,18 @@
   outline: 0;
 }
 
+.notClicked {
+  color: lightgray;
+}
+
+.notClicked:hover {
+  color: rgb(236, 236, 99);
+}
+
 .stars button:hover {
   color: rgb(236, 236, 99);
+}
+
+.clicked {
+  color: rgb(163, 163, 36);
 }
