--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.plus {
+  margin-left: 10px;
+}
+
 .App {
   text-align: center;
 }
