--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ $card-green-color: #39b54a;
 
 body {
   border: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   background-color: $secundary-bg-color;
@@ -342,7 +342,6 @@ input {
     width: 220px;
     background-color: $card-bg-color;
 
-
     .product-card-image {
       width: 100%;
       height: 60%;
@@ -359,7 +358,6 @@ input {
         position: relative;
       }
     }
-
 
     .product-card-info {
       height: 40%;
@@ -440,97 +438,97 @@ input {
   }
 }
 
-.product-detail {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+// .product-detail {
+//   display: flex;
+//   flex-direction: column;
+//   width: 80%;
+//   margin-left: auto;
+//   margin-right: auto;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 10px;
 
-  .detail-image {
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-content: center;
-    border: 1px solid rgb(122, 122, 122);
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0);
+//   .detail-image {
+//     width: 200px;
+//     height: 200px;
+//     display: flex;
+//     align-content: center;
+//     border: 1px solid rgb(122, 122, 122);
+//     padding: 0;
+//     background-color: rgba(255, 255, 255, 0);
 
-    .free-shipping {
-      width: 100px;
-      height: 100px;
-      top: -4px;
-      left: -4px;
-      z-index: 1;
-      border: 0;
-      position: relative;
-      background-color: rgba(255, 255, 255, 0);
-    }
-  }
+//     .free-shipping {
+//       width: 100px;
+//       height: 100px;
+//       top: -4px;
+//       left: -4px;
+//       z-index: 1;
+//       border: 0;
+//       position: relative;
+//       background-color: rgba(255, 255, 255, 0);
+//     }
+//   }
 
-  h1 {
-    margin: 2px;
-    padding: 2px;
-    font-size: 1.4em;
-    font-weight: 400;
-    margin-top: 10px;
-  }
+//   h1 {
+//     margin: 2px;
+//     padding: 2px;
+//     font-size: 1.4em;
+//     font-weight: 400;
+//     margin-top: 10px;
+//   }
 
-  h2 {
-    margin: 2px;
-    padding: 2px;
-    font-size: 1.2em;
-    font-weight: 300;
-    color: #141414f1;
-    margin-bottom: 6px;
-  }
+//   h2 {
+//     margin: 2px;
+//     padding: 2px;
+//     font-size: 1.2em;
+//     font-weight: 300;
+//     color: #141414f1;
+//     margin-bottom: 6px;
+//   }
 
-  img {
-    margin: 4px;
-    width: 30%;
-    border: 1px solid rgb(155, 155, 155);
-    margin-bottom: 10px;
-  }
+//   img {
+//     margin: 4px;
+//     width: 30%;
+//     border: 1px solid rgb(155, 155, 155);
+//     margin-bottom: 10px;
+//   }
 
-  .product-detail-name {
-    padding: 8px;
-    margin-top: 10px;
-    font-size: 1.2em;
-  }
+//   .product-detail-name {
+//     padding: 8px;
+//     margin-top: 10px;
+//     font-size: 1.2em;
+//   }
 
-  .product-detail-price {
-    padding: 8px;
-    font-size: 1.2em;
-    font-weight: 600;
-    margin-bottom: 14px;
+//   .product-detail-price {
+//     padding: 8px;
+//     font-size: 1.2em;
+//     font-weight: 600;
+//     margin-bottom: 14px;
 
-    span {
-      margin: 1px;
-      font-size: 1.2em;
-    }
+//     span {
+//       margin: 1px;
+//       font-size: 1.2em;
+//     }
 
-    .product-simbol {
-      font-size: 1.1em;
-      color: #000000fa;
-      margin-right: 2px;
-    }
-  }
-  .product-attr {
-    min-width: 600px;
-    min-height: 400px;
-    border: 1px solid red;
-    display: flex;
-  }
+//     .product-simbol {
+//       font-size: 1.1em;
+//       color: #000000fa;
+//       margin-right: 2px;
+//     }
+//   }
+//   .product-attr {
+//     min-width: 600px;
+//     min-height: 400px;
+//     border: 1px solid red;
+//     display: flex;
+//   }
 
-  .product-add-cart {
-    width: 300px;
-    border-radius: 10px;
-    height: 34px;
-  }
-}
+//   .product-add-cart {
+//     width: 300px;
+//     border-radius: 10px;
+//     height: 34px;
+//   }
+// }
 
 .product-add-cart {
   height: 30px;
@@ -846,4 +844,146 @@ input {
   width: 100%;
   min-height: 400px;
   border: 1px solid red;
+}
+
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+
+  .product-info {
+    width: 100%;
+    min-height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    padding: 1px;
+    margin-bottom: 6px;
+
+    .product-info-left {
+      // border: 1px solid green;
+      max-width: 60%;
+      align-self: flex-start;
+      margin: 5px;
+      display: flex;
+
+      .box-left {
+
+        .detail-image {
+          width: 200px;
+          height: 200px;
+          display: flex;
+          align-content: center;
+          border: 1px solid rgb(122, 122, 122);
+          padding: 0;
+          margin: 2px;
+          background-color: rgba(255, 255, 255, 0);
+    
+          .free-shipping {
+            width: 100px;
+            height: 100px;
+            top: 0px;
+            left: 0px;
+            z-index: 1;
+            border: 0;
+            position: relative;
+            background-color: rgba(255, 255, 255, 0);
+          }    
+        }
+      }
+      .box-right {
+        padding: 2px;
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 5px;
+
+        .product-detail-id {
+          align-self: flex-start;
+          font-size: 0.9em;
+          text-align: center;
+          font-weight: 600;
+          // border: 1px solid red;
+          margin-top: 2px;
+        }
+        .product-detail-name {
+          align-self: flex-start;
+          // border: 1px solid red;
+          font-size: 1em;
+          font-weight: 300;
+          margin-top: 4px;
+          color: #3f3f3f;
+        }
+        .product-detail-price {
+          // border: 1px solid red;
+          align-self: flex-start;
+          font-size: 1.1em;
+          font-weight: 600;
+          text-align: center;
+          margin-top: 4px;
+          color: #333333;
+        }
+  
+      }
+    }
+    .product-info-right {
+      // border: 1px solid green;
+      border-left: 1px solid rgb(192, 192, 192);
+      max-width: 40%;
+      align-self: flex-start;
+      margin: 5px;
+
+      .product-attr-list {
+        display: flex;
+        flex-direction: column;
+        padding: 4px;
+        width: auto;
+  
+        .product-attr-list-item {
+          display: flex;          
+          // border: 1px solid blue;
+          padding: 4px;
+          
+          .item-type {
+            align-self: center;
+            font-size: 0.7em;
+            font-weight: 600;
+            max-width: 40%;
+            // border: 1px solid violet;
+            padding: 2px;
+          }
+          .item-value {
+            align-self: center;
+            font-size: 0.8em;
+            max-width: 60%;
+            // border: 1px solid violet;
+            margin-left: 5px;
+            text-align: left;
+            color: rgb(46, 46, 46);
+          }
+  
+        }
+      }
+    }
+
+  }
+}
+
+.button-add-cart {
+  width: 260px;
+  height: 34px;
+  background-color: $primary-bg-color;
+  border: 1px solid rgb(92, 92, 92);
+  font-size: 0.9em;
+  font-weight: 500;
+  cursor: pointer;
 }
