--- a/src/App.scss
+++ b/src/App.scss
@@ -863,15 +863,17 @@ input {
     margin-right: auto;
     display: flex;
     align-items: center;
-    border: 1px solid rgb(100, 100, 100);
-    padding: 1px;
-    margin-bottom: 6px;
+    border: 1px solid rgb(77, 77, 77);
+    padding: 4px;
+    margin-bottom: 10px;
+    background-color: #f5f5f5;
+    padding-bottom: 12px;
 
     .product-info-left {
       // border: 1px solid green;
       max-width: 60%;
       align-self: center;
-      margin: 5px;
+      margin: 2px;
       display: flex;
 
       .box-left {
@@ -881,8 +883,8 @@ input {
         align-items: center;
         justify-content: flex-start;
         margin: 5px;
-        align-self:flex-start;
- 
+        align-self: flex-start;
+
         .detail-image {
           width: 200px;
           height: 200px;
@@ -892,7 +894,7 @@ input {
           padding: 0;
           margin: 2px;
           background-color: rgba(255, 255, 255, 0);
-    
+
           .free-shipping {
             width: 100px;
             height: 100px;
@@ -902,15 +904,16 @@ input {
             border: 0;
             position: relative;
             background-color: rgba(255, 255, 255, 0);
-          }    
+          }
         }
       }
+
       .box-right {
         padding: 2px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        margin: 5px;
+        margin: 2px;
         margin-top: 15px;
         margin-left: 15px;
         margin-bottom: 30px;
@@ -924,6 +927,7 @@ input {
           // border: 1px solid red;
           margin-top: 2px;
         }
+
         .product-detail-name {
           align-self: flex-start;
           // border: 1px solid red;
@@ -932,6 +936,7 @@ input {
           margin-top: 4px;
           color: #3f3f3f;
         }
+
         .product-detail-price {
           // border: 1px solid red;
           align-self: flex-start;
@@ -941,33 +946,36 @@ input {
           margin-top: 4px;
           color: #333333;
         }
-  
+
       }
     }
+
     .product-info-right {
       // border: 1px solid green;
       max-width: 40%;
       margin: 5px;
       align-self: flex-start;
-      margin-top: 20px;
+      margin-top: 10px;
 
       .product-attr-list {
         display: flex;
         flex-direction: column;
         width: auto;
         margin-left: 10px;
-  
+
         .product-attr-list-item {
-          display: flex;          
+          display: flex;
           //border: 1px solid blue;
           padding: 2px;
-          color: #444444;          
+          color: #444444;
+
           .item-type {
             align-self: center;
             font-size: 0.9em;
             // border: 1px solid violet;
             padding: 1px;
           }
+
           .item-value {
             align-self: center;
             font-size: 0.9em;
@@ -975,7 +983,7 @@ input {
             margin-left: 5px;
             text-align: left;
           }
-  
+
         }
       }
     }
@@ -991,4 +999,52 @@ input {
   font-size: 0.9em;
   font-weight: 500;
   cursor: pointer;
+}
+
+.input-quantity {
+  width: auto;
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  padding: 4px;
+
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+
+  input {
+    width: 50px;
+    font-size: 1.2em;
+    text-align: center;
+    font-weight: 600;
+    color: black;
+    background-color: white;
+    border: 1px solid rgb(153, 153, 153);
+    margin: 2px;
+    margin-right: 6px;
+  }
+
+  button {
+    border: 1px solid rgb(126, 126, 126);
+    border-radius: 50%;
+    margin: 2px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    font-size: 0.9em;
+    text-align: center;
+    cursor: pointer;
+
+    i {
+      text-align: center;
+    }
+  }
 }
