--- a/src/App.css
+++ b/src/App.css
@@ -946,11 +946,12 @@ input:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid #4d4d4d;
+  border: 1px solid #5f5f5f;
   padding: 4px;
+  margin-top: 8px;
   margin-bottom: 10px;
   background-color: #f5f5f5;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
 }
 
 .product-detail .product-info .product-info-left {
@@ -1100,19 +1101,48 @@ input:focus {
   text-align: left;
 }
 
+.box-add-cart {
+  padding: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.box-add-cart .input-quantity {
+  margin: 4px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-right: 10px;
+}
+
+.box-add-cart .button-add-cart {
+  margin: 4px;
+  height: 40px;
+  width: 200px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-left: 2px;
+}
+
 .button-add-cart {
   width: 260px;
   height: 34px;
   background-color: #fff159;
   border: 1px solid #5c5c5c;
   font-size: 0.9em;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
 }
 
 .input-quantity {
   width: auto;
-  border: 1px solid red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1143,15 +1173,15 @@ input:focus {
   background-color: white;
   border: 1px solid #999999;
   margin: 2px;
-  margin-right: 6px;
+  margin-right: 10px;
 }
 
 .input-quantity button {
   border: 1px solid #7e7e7e;
   border-radius: 50%;
   margin: 2px;
-  width: 30px;
-  height: 30px;
+  width: 38px;
+  height: 38px;
   background-color: white;
   font-size: 0.9em;
   text-align: center;
