--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ main {
 
 .product-card a {
   color: #303030;
-  font-weight: 400;
+  font-weight: 600;
   height: 210px;
   text-decoration: none;
 }
@@ -100,6 +100,15 @@ main {
   justify-content: center;
   margin: 10px 1%;
   width: 76%;
+}
+
+.product-list button {
+  background-color: rgb(0, 177, 24);
+  border: rgb(0, 177, 24) solid 1px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 600;
+  padding: 5px 10px;
 }
 
 .search-bar {
