requisito 12 - forms completo

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ body {
   height: auto;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   background-color: #fff159;
   border: 0;
