--- a/src/components/ProductOnCart.css
+++ b/src/components/ProductOnCart.css
@@ -5,7 +5,6 @@
   flex-flow: row nowrap;
   margin: 20px;
   position: relative;
-  width: 100%;
 }
 
 .productOnCart h4 {
@@ -32,4 +31,9 @@
 .quantidadeDiv div, .quantidadeDiv button {
   cursor: pointer;
   padding: 8px;
+}
+
+.cartPrice {
+  color: gray;
+  font-size: 1.5em;
 }
