--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,22 @@ input {
   }
 }
 
+textarea {
+  border: 1px solid rgba(149, 149, 149, 0.692);
+  color: $card-primary-alt-color;
+  background-color: white;
+
+  &:hover {
+    border: 1px solid rgb(149, 149, 149);
+  }
+
+  &:focus {
+    outline: none;
+    border: 1px solid rgba(149, 149, 149, 0.883);
+  }
+}
+
+
 .loading {
   font-size: 1.5em;
   color: black;
@@ -1102,5 +1118,60 @@ input {
     i {
       text-align: center;
     }
+  }
+}
+
+.product-evaluation {
+  border: 1px solid rgb(77, 77, 77);
+  background-color: rgb(250, 250, 250);
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  padding-bottom: 10px;
+  margin-top: 6px;
+  font-size: 0.8em;
+  border-radius: 10px;
+  h4 {
+    font-size: 1.2em;
+    padding: 0;
+    margin: 0;
+    margin-top: 2px;
+  }
+  label {
+    margin-top: 14px;
+    display: flex;
+    input {
+     margin-left: 8px; 
+     font-size: 1.2em;
+     width: 100%;
+     align-self: center;
+    }
+  }
+  span {
+    margin-top: 8px;
+  }
+  textarea {
+    margin-top: 2px;
+    font-size: 1em;
+    resize: none;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    max-width: 100%;    
+  }
+  button {
+    margin-top: 8px;
+    width: 50%;
+    height: 34px;
+    align-self: center;
+    background-color: white;
+    border: 1px solid rgb(92, 92, 92);
+    font-size: 0.9em;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 6px;
   }
 }
