--- a/src/styles/shoppingCartStyle.css
+++ b/src/styles/shoppingCartStyle.css
@@ -1,4 +1,22 @@
-.shopping-cart-content {
+.cart-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   padding: 30px;
   text-align: center;
+}
+
+.product {
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  margin-top: 30px;
+  padding: 60px;
+  text-align: center;
+  width: 800px;
+}
+
+.cart-product-img {
+  margin-right: 100px;
+  width: 500px;
 }
