--- a/src/components/ProductEvaluationForm/styles.module.css
+++ b/src/components/ProductEvaluationForm/styles.module.css
@@ -43,6 +43,7 @@
   border-radius: 4px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   color: white;
+  cursor: pointer;
   font-size: 1.2rem;
   min-width: 100px;
   padding: 10px;
