mudança css product details

--- a/src/styles/cardStyles.css
+++ b/src/styles/cardStyles.css
@@ -29,6 +29,7 @@ h2 {
   background-color: rgb(210, 170, 250);
   border: 2px solid rgb(253, 227, 247);
   border-radius: 10px;
+  height: 50px;
   padding: 10px;
 }
 
