--- a/src/styles/cardProductDetailsStyle.css
+++ b/src/styles/cardProductDetailsStyle.css
@@ -11,10 +11,15 @@
   margin-top: 30px;
   padding: 80px;
   text-align: center;
-  width: 800px;
+  width: 900px;
 }
 
 .product-details-img {
   margin-right: 100px;
   width: 200px;
+}
+
+.details-container {
+  margin-right: 50px;
+  width: 500px;
 }
