--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,16 @@
   width: 18vw;
 }
 
-.header-navbar {
+.header-container {
   display: flex;
   justify-content: center;
   position: relative;
 }
 
-.header-navbar img {
-  height: 40px;
+.header-container img {
   margin: 10px;
   position: absolute;
   right: 0;
-  width: 40px;
 }
 
 .search-container {
@@ -38,7 +36,7 @@
   width: 80vw;
 }
 
-.products-container {
+.main-container {
   display: flex;
 }
 
@@ -49,16 +47,26 @@
 }
 
 .product-card {
+  align-items: center;
   background: rgb(248, 248, 248);
   border: solid 1px #ccc;
+  display: flex;
+  flex-direction: column;
   font-size: 10px;
   height: 200px;
-  padding: 10px;
+  justify-content: space-between;
+  padding: 5px;
   width: 20vw;
 }
 
 .product-card:hover {
   border: solid 1px rgb(24, 22, 22);
+}
+
+.product-card button {
+  display: inline-block;
+  font-size: 10px;
+  width: 18vw;
 }
 
 a {
@@ -74,4 +82,22 @@ a {
 
 .technical-info-container p {
   font-size: 8px;
+}
+
+.cart-list-items {
+  display: flex;
+  font-size: 9px;
+  justify-content: space-between;
+  margin-left: 10px;
+  width: 55%;
+}
+
+.cart-list-items img {
+  height: 22px;
+  width: 22px;
+}
+
+.cart-icon {
+  height: 40px;
+  width: 40px;
 }
