--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@700&display=swap') ;
 
 body {
   background-color: #ffd;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Open Sans , sans-serif;
 }
 
 .special-text {
   color: #344;
-  font-family: 'Quicksand', sans-serif;
+  font-family: Quicksand , sans-serif;
   font-size: 25px;
   line-height: 1.75em;
 }
@@ -25,13 +25,13 @@ body {
 */
 
 .shopping-cart-icon {
+  background-color: #c9de55;
   border-radius: 100px;
-  background-color: #C9DE55;
   transition: all 0.25s ease;
 }
 
 .shopping-cart-icon:hover {
-  background-color: #7D9100;
+  background-color: #7d9100;
 }
 
 /*
@@ -39,6 +39,7 @@ body {
 */
 
 .sec-categories {
+  align-items: flex-start;
   display: flex;
   flex-direction: row;
 }
@@ -50,7 +51,6 @@ body {
 .categories-list {
   margin: 10px 20px;
   padding: 10px 25px;
-  flex-basis: auto;
 }
 
 .categories-list ul {
@@ -69,16 +69,16 @@ body {
   color: #344;
   outline: none;
   padding: 3px 10px;
-  width: 300px;
   transition: all 0.25s ease;
+  width: 300px;
 }
 
 .search-bar:focus {
-  border: 1px solid #C9DE55;
+  border: 1px solid #c9de55;
 }
 
 .search-bar-button {
-  background-color: #C9DE55;
+  background-color: #c9de55;
   border: none;
   border-radius: 100px;
   color: white;
@@ -92,11 +92,11 @@ body {
 }
 
 .search-bar-button:hover {
-  background-color: #7D9100;
+  background-color: #7d9100;
 }
 
 .search-bar:hover {
-  border-color: #7D9100;
+  border-color: #7d9100;
 }
 
 .search-bar-button:focus {
@@ -112,6 +112,6 @@ body {
 */
 
 .sec-products {
-  width: 800px;
   margin-top: 10px;
+  width: 800px;
 }
